# LoRaSensor

./: .gitignore  .gitmodules  README.md
LoRaSensorCode/: .cproject  .cproject.bak  .gitignore  .mxproject  .project  .project.bak  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LoRaSensorCode.emProject  LoRaSensorCode.emSession  LoRaSensorCode.ioc  LoRaSensorCode.launch  LoRaSensorCode.sln  LoRaSensorCode.vcxproj  LoRaSensorCode.vcxproj.filters  Makefile  STM32L071KBTX_FLASH.ld  STM32Make.make  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
LoRaSensorCode/.externalToolBuilders/: New_Builder.launch
LoRaSensorCode/Core/Inc/: main.h  stm32l0xx_hal_conf.h  sx126x.h  sx126x_hal.h
LoRaSensorCode/Core/Inc/Backup/: main.h.bak
LoRaSensorCode/Core/Src/: adc.c  gpio.c  main.c  main.c.bak  main.c.bak.2  main.c.bak.3  main.c.bak.4  main.c.bak.5  spi.c  stm32l0xx_hal_msp.c  sx126x_hal.c  usart.c
LoRaSensorCode/Core/Src/Backup/: gpio.c.bak  i2c.c.bak  main.c.bak  spi.c.bak  sysmem.c.bak
LoRaSensorCode/Debug/: LoRaSensorCode.ind  LoRaSensorCode.list  makefile  objects.list  sources.mk  subdir.mk
LoRaSensorCode/Debug Internal/: LoRaSensorCode.ind
LoRaSensorCode/Debug/Application/User/Core/: subdir.mk
LoRaSensorCode/Debug/Application/User/Startup/: subdir.mk
LoRaSensorCode/Debug/Core/Src/: subdir.mk
LoRaSensorCode/Debug/Core/Src/sx126x_driver/src/: subdir.mk
LoRaSensorCode/Debug/Core/Startup/: subdir.mk
LoRaSensorCode/Debug/Drivers/CMSIS/: subdir.mk
LoRaSensorCode/Debug/Drivers/STM32L0xx_HAL_Driver/: subdir.mk
LoRaSensorCode/Debug/Drivers/STM32L0xx_HAL_Driver/Src/: subdir.mk
LoRaSensorCode/cmake/: gcc-arm-none-eabi.cmake  st-project.cmake
